[metadata]
name = rustenv
version = 0.0.6
description = Virtual, activate-able environments for Rust
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chriskuehl/rustenv
author = Chris Kuehl
author_email = ckuehl@ckuehl.me
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = rustenv
python_requires = >=3.9

[options.entry_points]
console_scripts =
    rustenv=rustenv:main

[wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
